// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`extracting errors Extracting errors #unexpectedWithTokenHint 1`] = `
{
  "end": {
    "col": 13,
    "line": 16,
  },
  "start": {
    "col": 7,
    "line": 16,
  },
  "text": 
"Unexpected token: <Token IDENT "actors">
Hint: It appears that a ',' is missing in a shape before 'actors'"
,
}
`;

exports[`extracting errors Extracting errors #typeOrAliasDoesNotExist 1`] = `
{
  "end": {
    "col": 17,
    "line": 21,
  },
  "start": {
    "col": 16,
    "line": 21,
  },
  "text": 
"object type or alias 'default::a' does not exist
Hint: did you mean '.id'?"
,
}
`;

exports[`extracting errors Extracting errors #objectTypeHasNoProp 1`] = `
{
  "end": {
    "col": 22,
    "line": 21,
  },
  "start": {
    "col": 16,
    "line": 21,
  },
  "text": "object type 'default::Movie' has no link or property 'TITLE'",
}
`;

exports[`extracting errors Extracting errors #unexpected 1`] = `
{
  "end": {
    "col": 17,
    "line": 21,
  },
  "start": {
    "col": 7,
    "line": 21,
  },
  "text": "Unexpected 'orderaaaaa'",
}
`;
